seaqt/QtWidgets/gen_qdatetimeedit.h

typedef struct QChildEvent QChildEvent;
typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QEvent QEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QLineEdit QLineEdit;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct QWidget QWidget;
typedef struct VirtualQDateTimeEdit VirtualQDateTimeEdit;
typedef struct QDateTimeEdit_VTable{
	void (*destructor)(VirtualQDateTimeEdit* self);
	QMetaObject* (*metaObject)(const VirtualQDateTimeEdit* self);
	void* (*metacast)(VirtualQDateTimeEdit* self, const char* param1);
	int (*metacall)(VirtualQDateTimeEdit* self, int param1, int param2, void** param3);
	QSize* (*sizeHint)(const VirtualQDateTimeEdit* self);
	void (*clear)(VirtualQDateTimeEdit* self);
	void (*stepBy)(VirtualQDateTimeEdit* self, int steps);
	bool (*event)(VirtualQDateTimeEdit* self, QEvent* event);
	void (*keyPressEvent)(VirtualQDateTimeEdit* self, QKeyEvent* event);
	void (*wheelEvent)(VirtualQDateTimeEdit* self, QWheelEvent* event);
	void (*focusInEvent)(VirtualQDateTimeEdit* self, QFocusEvent* event);
	bool (*focusNextPrevChild)(VirtualQDateTimeEdit* self, bool next);
	int (*validate)(const VirtualQDateTimeEdit* self, struct miqt_string input, int* pos);
	void (*fixup)(const VirtualQDateTimeEdit* self, struct miqt_string input);
	QDateTime* (*dateTimeFromText)(const VirtualQDateTimeEdit* self, struct miqt_string text);
	struct miqt_string (*textFromDateTime)(const VirtualQDateTimeEdit* self, QDateTime* dt);
	int (*stepEnabled)(const VirtualQDateTimeEdit* self);
	void (*mousePressEvent)(VirtualQDateTimeEdit* self, QMouseEvent* event);
	void (*paintEvent)(VirtualQDateTimeEdit* self, QPaintEvent* event);
	void (*initStyleOption)(const VirtualQDateTimeEdit* self, QStyleOptionSpinBox* option);
	QSize* (*minimumSizeHint)(const VirtualQDateTimeEdit* self);
	QVariant* (*inputMethodQuery)(const VirtualQDateTimeEdit* self, int param1);
	void (*resizeEvent)(VirtualQDateTimeEdit* self, QResizeEvent* event);
	void (*keyReleaseEvent)(VirtualQDateTimeEdit* self, QKeyEvent* event);
	void (*focusOutEvent)(VirtualQDateTimeEdit* self, QFocusEvent* event);
	void (*contextMenuEvent)(VirtualQDateTimeEdit* self, QContextMenuEvent* event);
	void (*changeEvent)(VirtualQDateTimeEdit* self, QEvent* event);
	void (*closeEvent)(VirtualQDateTimeEdit* self, QCloseEvent* event);
	void (*hideEvent)(VirtualQDateTimeEdit* self, QHideEvent* event);
	void (*mouseReleaseEvent)(VirtualQDateTimeEdit* self, QMouseEvent* event);
	void (*mouseMoveEvent)(VirtualQDateTimeEdit* self, QMouseEvent* event);
	void (*timerEvent)(VirtualQDateTimeEdit* self, QTimerEvent* event);
	void (*showEvent)(VirtualQDateTimeEdit* self, QShowEvent* event);
	int (*devType)(const VirtualQDateTimeEdit* self);
	void (*setVisible)(VirtualQDateTimeEdit* self, bool visible);
	int (*heightForWidth)(const VirtualQDateTimeEdit* self, int param1);
	bool (*hasHeightForWidth)(const VirtualQDateTimeEdit* self);
	QPaintEngine* (*paintEngine)(const VirtualQDateTimeEdit* self);
	void (*mouseDoubleClickEvent)(VirtualQDateTimeEdit* self, QMouseEvent* event);
	void (*enterEvent)(VirtualQDateTimeEdit* self, QEnterEvent* event);
	void (*leaveEvent)(VirtualQDateTimeEdit* self, QEvent* event);
	void (*moveEvent)(VirtualQDateTimeEdit* self, QMoveEvent* event);
	void (*tabletEvent)(VirtualQDateTimeEdit* self, QTabletEvent* event);
	void (*actionEvent)(VirtualQDateTimeEdit* self, QActionEvent* event);
	void (*dragEnterEvent)(VirtualQDateTimeEdit* self, QDragEnterEvent* event);
	void (*dragMoveEvent)(VirtualQDateTimeEdit* self, QDragMoveEvent* event);
	void (*dragLeaveEvent)(VirtualQDateTimeEdit* self, QDragLeaveEvent* event);
	void (*dropEvent)(VirtualQDateTimeEdit* self, QDropEvent* event);
	bool (*nativeEvent)(VirtualQDateTimeEdit* self, struct miqt_string eventType, void* message, intptr_t* result);
	int (*metric)(const VirtualQDateTimeEdit* self, int param1);
	void (*initPainter)(const VirtualQDateTimeEdit* self, QPainter* painter);
	QPaintDevice* (*redirected)(const VirtualQDateTimeEdit* self, QPoint* offset);
	QPainter* (*sharedPainter)(const VirtualQDateTimeEdit* self);
	void (*inputMethodEvent)(VirtualQDateTimeEdit* self, QInputMethodEvent* param1);
	bool (*eventFilter)(VirtualQDateTimeEdit* self, QObject* watched, QEvent* event);
	void (*childEvent)(VirtualQDateTimeEdit* self, QChildEvent* event);
	void (*customEvent)(VirtualQDateTimeEdit* self, QEvent* event);
	void (*connectNotify)(VirtualQDateTimeEdit* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQDateTimeEdit* self, QMetaMethod* signal);
}QDateTimeEdit_VTable;
VirtualQDateTimeEdit* QDateTimeEdit_new(const QDateTimeEdit_VTable* vtbl, size_t vdata, QWidget* parent);
VirtualQDateTimeEdit* QDateTimeEdit_new2(const QDateTimeEdit_VTable* vtbl, size_t vdata);
VirtualQDateTimeEdit* QDateTimeEdit_new3(const QDateTimeEdit_VTable* vtbl, size_t vdata, QDateTime* dt);
VirtualQDateTimeEdit* QDateTimeEdit_new4(const QDateTimeEdit_VTable* vtbl, size_t vdata, QDate* d);
VirtualQDateTimeEdit* QDateTimeEdit_new5(const QDateTimeEdit_VTable* vtbl, size_t vdata, QTime* t);
VirtualQDateTimeEdit* QDateTimeEdit_new6(const QDateTimeEdit_VTable* vtbl, size_t vdata, QDateTime* dt, QWidget* parent);
VirtualQDateTimeEdit* QDateTimeEdit_new7(const QDateTimeEdit_VTable* vtbl, size_t vdata, QDate* d, QWidget* parent);
VirtualQDateTimeEdit* QDateTimeEdit_new8(const QDateTimeEdit_VTable* vtbl, size_t vdata, QTime* t, QWidget* parent);
void QDateTimeEdit_connect_dateTimeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDateTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_timeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_dateChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
void QDateTimeEdit_virtualbase_initPainter(const VirtualQDateTimeEdit* self, QPainter* painter);
QPaintDevice* QDateTimeEdit_virtualbase_redirected(const VirtualQDateTimeEdit* self, QPoint* offset);
QPainter* QDateTimeEdit_virtualbase_sharedPainter(const VirtualQDateTimeEdit* self);
void QDateTimeEdit_virtualbase_inputMethodEvent(VirtualQDateTimeEdit* self, QInputMethodEvent* param1);
bool QDateTimeEdit_virtualbase_eventFilter(VirtualQDateTimeEdit* self, QObject* watched, QEvent* event);
void QDateTimeEdit_virtualbase_childEvent(VirtualQDateTimeEdit* self, QChildEvent* event);
void QDateTimeEdit_virtualbase_customEvent(VirtualQDateTimeEdit* self, QEvent* event);
void QDateTimeEdit_virtualbase_connectNotify(VirtualQDateTimeEdit* self, QMetaMethod* signal);
void QDateTimeEdit_virtualbase_disconnectNotify(VirtualQDateTimeEdit* self, QMetaMethod* signal);
QLineEdit* QDateTimeEdit_protectedbase_lineEdit(const VirtualQDateTimeEdit* self);
void QDateTimeEdit_protectedbase_setLineEdit(VirtualQDateTimeEdit* self, QLineEdit* edit);
void QDateTimeEdit_protectedbase_updateMicroFocus(VirtualQDateTimeEdit* self);
void QDateTimeEdit_protectedbase_create(VirtualQDateTimeEdit* self);
void QDateTimeEdit_protectedbase_destroy(VirtualQDateTimeEdit* self);
bool QDateTimeEdit_protectedbase_focusNextChild(VirtualQDateTimeEdit* self);
bool QDateTimeEdit_protectedbase_focusPreviousChild(VirtualQDateTimeEdit* self);
QObject* QDateTimeEdit_protectedbase_sender(const VirtualQDateTimeEdit* self);
int QDateTimeEdit_protectedbase_senderSignalIndex(const VirtualQDateTimeEdit* self);
int QDateTimeEdit_protectedbase_receivers(const VirtualQDateTimeEdit* self, const char* signal);
bool QDateTimeEdit_protectedbase_isSignalConnected(const VirtualQDateTimeEdit* self, QMetaMethod* signal);
const QMetaObject* QDateTimeEdit_staticMetaObject();
typedef struct VirtualQTimeEdit VirtualQTimeEdit;
void* QTimeEdit_vdata(VirtualQTimeEdit* self);
QMetaObject* QTimeEdit_metaObject(const QTimeEdit* self);
void* QTimeEdit_metacast(QTimeEdit* self, const char* param1);
int QTimeEdit_metacall(QTimeEdit* self, int param1, int param2, void** param3);
struct miqt_string QTimeEdit_tr(const char* s);
void QTimeEdit_userTimeChanged(QTimeEdit* self, QTime* time);
void QTimeEdit_connect_userTimeChanged(QTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
struct miqt_string QTimeEdit_tr2(const char* s, const char* c);
struct miqt_string QTimeEdit_tr3(const char* s, const char* c, int n);
void QDateEdit_connect_userDateChanged(QDateEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));